# athensears

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Dockerfile  Dockerfile.dev  LICENSE  RAILWAY_DEPLOY.md  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  railway.json  test-brave-api.sh  test-brave-search.js
apps/gig-crawler-2-python-backup/: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION.md  QUICKSTART.md  README.md  TESTING.md  pyproject.toml  railway.json  requirements.txt  setup.sh
apps/gig-crawler-2-python-backup/src/: __init__.py  config.py  main.py
apps/gig-crawler-2-python-backup/src/adapters/: __init__.py
apps/gig-crawler-2-python-backup/src/adapters/brave_search/: __init__.py  brave_search_adapter.py
apps/gig-crawler-2-python-backup/src/adapters/content_scraper/: __init__.py  trafilatura_adapter.py
apps/gig-crawler-2-python-backup/src/adapters/llm/: __init__.py  (+1 more)
apps/gig-crawler-2-python-backup/src/commands/: __init__.py  sync_gigs_command.py
apps/gig-crawler-2-python-backup/src/models/: __init__.py  gig.py  scraped_content.py  search_result.py  strapi.py  venue.py
apps/gig-crawler-2-python-backup/src/ports/: __init__.py  gigs_port.py  llm_port.py  scraper_port.py  search_port.py
apps/gig-crawler-2-python-backup/src/prompts/: __init__.py  gig_extraction.py  url_filter.py
apps/gig-crawler-2-python-backup/src/utils/: date_utils.py  logger.py  retry.py
apps/gig-crawler-2-python-backup/tests/: __init__.py  test_models.py
(+110 files in other folders)
